[bugfix] Cleanup JVM arguments